--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,11 +2,11 @@
   "name": "PWAのテスト",
   "short_name": "PTEST",
   "icons": [{
-        "src": "https://test.mousetronick.com/minimumPwa/logo192.png",
+        "src": "https://kazukazuprogram.github.io/swtest/logo192.png",
         "sizes": "192x192",
         "type": "image/png"
       }],
-  "start_url": "https://test.mousetronick.com/minimumPwa/index.html",
+  "start_url": "https://kazukazuprogram.github.io/swtest/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
